# lunara

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  BUILD.md  EXTENDING.md
examples/: 01_transformer_block.py  02_autotune_gemm.py  03_flash_attention.py  04_roofline_sweep.py
lunara/: CMakeLists.txt  __init__.py  driver.py
lunara/codegen/: CMakeLists.txt  __init__.py  autotuner.py  ptx_backend.cpp  ptx_backend.h  triton_emitter.py
lunara/dialects/: CMakeLists.txt  __init__.py  stablehlo_to_linalg.cpp  stablehlo_to_linalg.h
lunara/frontend/: CMakeLists.txt  __init__.py  graph_ir.cpp  graph_ir.h  onnx_importer.cpp  onnx_importer.h
lunara/passes/: CMakeLists.txt  __init__.py  layout_transform.cpp  layout_transform.h  operator_fusion.cpp  operator_fusion.h  pipeline.cpp  pipeline.h  tiling.cpp  tiling.h
lunara/profiler/: CMakeLists.txt  __init__.py  nsight_profiler.py
lunara/runtime/: CMakeLists.txt  __init__.py  executor.cpp  executor.h
lunara/utils/: CMakeLists.txt  __init__.py  logging.h  shape_utils.cpp  shape_utils.h
scripts/: bench.py  build.sh  run_tests.sh
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_pipeline.cpp
tests/python/: conftest.py  test_autotuner.py  test_driver.py  test_profiler.py  test_triton_emitter.py
tests/unit/: CMakeLists.txt  test_frontend.cpp  test_graph_ir.cpp  test_passes.cpp  test_shape_utils.cpp
tools/: CMakeLists.txt  lunara_opt.cpp
