[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunara"
version = "0.1.0"
description = "ML compiler: ONNX → StableHLO → MLIR linalg → Triton/PTX"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Lunara Contributors"}]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "torch>=2.1.0",
    "triton>=2.1.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
profiler = ["matplotlib>=3.5.0"]
onnx     = ["onnx>=1.14.0", "onnxruntime>=1.16.0"]
dev      = ["pytest>=7.0", "pytest-xdist", "pytest-cov",
            "black", "ruff", "mypy"]

[project.scripts]
lunara         = "lunara.driver:_main"
lunara-emit    = "lunara.codegen.triton_emitter:__main__"
lunara-tune    = "lunara.codegen.autotuner:__main__"
lunara-profile = "lunara.profiler.nsight_profiler:__main__"

[tool.pytest.ini_options]
testpaths    = ["tests/python"]
python_files = "test_*.py"
addopts      = "-v --tb=short"

[tool.black]
line-length    = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length    = 100
target-version = "py39"
select         = ["E", "F", "W", "I", "N", "UP"]
ignore         = ["E501", "E741"]

[tool.mypy]
python_version            = "3.9"
warn_return_any           = true
warn_unused_configs       = true
disallow_incomplete_defs  = false
ignore_missing_imports    = true
